sua nut view more va mot so lỗi

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Xác nhận mật khẩu">
 				  </div>
 				  
-				  <button type="submit" class="btn btn-outline-secondary">Register</button>
+				  <button type="submit" class="btn btn-outline-secondary">Sign up</button>
 				</form>
 				<p class="float-xs-left"><a href="#" class="formdangnhap">Đăng nhập</a></p>
 				<a class="float-xs-right" href="">Quên mật khẩu</a>
