--- a/thoitrangnam.html
+++ b/thoitrangnam.html
@@ -133,7 +133,7 @@
 	<section class="viewproducts">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-2 danhmuc">
+				<div class="col-sm-2 listproducts">
 					<ul>
 						<li>Tất cả</li>
 						<li>Áo thun</li>
@@ -147,8 +147,8 @@
 						<li>Quần âu</li>
 					</ul>
 				</div>
-				<div class="col-sm-10 col-xs-12 sanpham">
-					<div class="col-sm-12 loc">
+				<div class="col-sm-10 col-xs-12 products">
+					<div class="col-sm-12 filter">
 						<p>Ưu tiên xem:</p>
 						<ul>
 							<li>Hàng mới</li>
